# beast-rest

./: .gitmodules  CMakeLists.txt  README.MD
client/: CMakeLists.txt
client/include/: client.h  confighandler.h
client/src/: client.cpp  confighandler.cpp  main.cpp
server/: CMakeLists.txt  server.cfg
server/doc/: server.cfg
server/include/: confighandler.h  httphandler.h  server.h
server/src/: confighandler.cpp  httphandler.cpp  main.cpp  server.cpp
